revert api routes
